Se crean los ultimos fxml, y se epiezan los controlodaroes del administrador